# Django

./: .gitignore  .python-version  make_no_image.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
restaurants/: admin.py  models.py  tests.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py
reviews/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py
templates/registration/: login.html  signup.html  signup_done.html  verify_failed.html  verify_success.html
todo/: admin.py  cb_views.py  cbv_urls.py  forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_todo_options_todo_user_alter_todo_created_at_and_more.py  0003_alter_todo_description_alter_todo_user.py  0004_alter_todo_options_comment.py  0005_todo_completed_image_todo_thumbnail.py  0006_remove_comment_message_remove_comment_updated_at_and_more.py
todo/templates/: base.html
todo/templates/todo/: base.html  comment_confirm_delete.html  comment_update.html  pagination.html  todo_create.html  todo_info.html  todo_list.html  todo_update.html
users/: admin.py  cb_views.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: email.py
과제/django_day1/: .gitignore
과제/django_day1/books/: models.py  views.py
과제/django_day1/books/migrations/: 0001_initial.py
과제/django_day1/config/: settings.py  urls.py
과제/django_day1/gugudan/: apps.py  urls.py  views.py
과제/django_day1/movies/: urls.py  views.py
(+4 files in other folders)
