[project]
name = "my-drf-project"
version = "0.1.0"
description = ""
authors = [
    {name = "kimjinsu",email = "creeeeeeeeeeeeeping@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0,<7.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "django-cleanup (>=9.0.0,<10.0.0)",
    "django-extensions (>=4.1,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
